[gd_scene load_steps=2 format=3 uid="uid://dm2oy5yyx5kdi"]

[ext_resource type="Script" uid="uid://hbte7yhebot7" path="res://Scenes/cambioManager.gd" id="1_dw82e"]

[node name="Cambio" type="Window"]
initial_position = 2
size = Vector2i(600, 400)
wrap_controls = true
unresizable = true
borderless = true
script = ExtResource("1_dw82e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ventana de cobro"
horizontal_alignment = 1

[node name="calculatedFinalPriceLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 44
text = "Cantidad a cobrar"
fit_content = true
horizontal_alignment = 1

[node name="MoneyReceivedInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Ingresa la cantidad recibida"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="bill20" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "$20"

[node name="bill50" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "$50"

[node name="bill100" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "$100"

[node name="bill200" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "$200"

[node name="bill500" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "$500"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Te sobra:"
horizontal_alignment = 1

[node name="MoneyToGiveLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Cantidad de dinero"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ImpimirButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Terminar e imprimir"

[node name="CancelarButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Cancelar"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/bill20" to="." method="_on_bill_20_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/bill50" to="." method="_on_bill_50_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/bill100" to="." method="_on_bill_100_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/bill200" to="." method="_on_bill_200_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/bill500" to="." method="_on_bill_500_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelarButton" to="." method="_on_cancelar_button_pressed"]
